--- a/src/App.scss
+++ b/src/App.scss
@@ -589,6 +589,7 @@ a:hover {
 
 
 .moviecard {
+    transition: all 0.3s ease;
 
     height: 300px;
     border-radius: 10px;
@@ -600,10 +601,11 @@ a:hover {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: all 0.2s;
     }
 
     .overlybx {
-        transition: all 0.1s linear;
+        transition: all 0.2s;
         position: absolute;
         background: linear-gradient(1deg, rgb(0 0 0 / 94%) 14%, rgb(255 255 255 / 41%) 94%);
         top: 0;
